--- a/src/app/styles/navBars/navBarMobile.scss
+++ b/src/app/styles/navBars/navBarMobile.scss
@@ -1,7 +1,7 @@
 .header-nav-mobile {
   position: fixed;
   top: 100px;
-  left: -200%;
+  left: 0;
   width: 280px;
   // height: 100vh;
   background: #ffffff;
@@ -9,12 +9,14 @@
   z-index: 1000;
   transition: transform 0.35s cubic-bezier(0.4, 0, 0.2, 1);
   will-change: transform;
-  padding-top: 70px;
+  // padding-top: 70px;
   overflow-y: auto;
+
+  transform: translateX(-100%);
 }
 
 .header-nav-mobile.open {
-  transform: translateX(100%);
+  transform: translateX(-5%);
 }
 
 .nav-bar-mobile {
@@ -93,4 +95,9 @@
 }
 .header-nav-mobile.open .header_nav-item-mobile:nth-child(5) {
   animation-delay: 0.5s;
+}
+
+.closeNav {
+  background: none;
+  border: none;
 }
