--- a/src/app/styles/pages/mainPage.scss
+++ b/src/app/styles/pages/mainPage.scss
@@ -75,6 +75,7 @@
     padding: 20px;
     position: relative;
     width: 100%;
+    // transition: 0.3s ease;
 
     .about-container {
       width: 100%;
@@ -126,25 +127,25 @@
       }
     }
 
-    &::after {
-      content: "";
-      position: absolute;
-      top: 40px;
-      right: 0;
-      width: 1px;
-      height: calc(100% - 80px);
-      background-color: rgba($main-text, 0.1);
-    }
+    // &::after {
+    //   content: "";
+    //   position: absolute;
+    //   top: 40px;
+    //   right: 0;
+    //   width: 1px;
+    //   height: calc(100% - 80px);
+    //   background-color: rgba($main-text, 0.1);
+    // }
 
-    &::before {
-      content: "";
-      position: absolute;
-      bottom: 40px;
-      left: -22px;
-      width: calc(100% + 22px);
-      height: 1px;
-      background-color: rgba($main-text, 0.1);
-    }
+    // &::before {
+    //   content: "";
+    //   position: absolute;
+    //   bottom: 40px;
+    //   left: -22px;
+    //   width: calc(100% + 22px);
+    //   height: 1px;
+    //   background-color: rgba($main-text, 0.1);
+    // }
   }
 
   .info-des-short {
@@ -386,6 +387,36 @@
 }
 // телефон
 @media (max-width: $mobile) {
+  .info {
+    margin: 0 auto;
+    padding: 0;
+
+    .info-description {
+      padding: 0;
+      .about-text {
+        h2 {
+          font-size: 30px;
+          margin-top: 10px;
+          margin-bottom: 10px;
+          padding-bottom: 5px;
+
+          &::after {
+            width: 95px;
+          }
+        }
+        .info-des-short {
+          font-size: 22px;
+        }
+      }
+      .about-map {
+        // width: 20%;
+        // height: 100px;
+      }
+      .info-des-long {
+        font-size: 22px;
+      }
+    }
+  }
 }
 
 //Планшет
