--- a/src/app/styles/ui/mapLocation.scss
+++ b/src/app/styles/ui/mapLocation.scss
@@ -173,6 +173,13 @@
         position: static;
         margin-top: 20px;
 
+        .ww-informers-box-854753 {
+          margin: 10px auto;
+        }
+        iframe {
+          margin: 0 auto;
+        }
+
         > * + * {
           margin-left: 0;
           margin-top: 15px;
