--- a/src/app/styles/navBars/navBar.scss
+++ b/src/app/styles/navBars/navBar.scss
@@ -161,3 +161,26 @@
     background-color: #f0f0f0;
   }
 }
+
+@media (max-width: $mobile) {
+  .div-logo {
+    display: none;
+  }
+  .div-address {
+    h1 {
+      font-size: 22px;
+    }
+    p {
+      text-align: left;
+      padding-left: 10px;
+    }
+  }
+  .contact-links {
+    a {
+      margin-left: 10px;
+    }
+  }
+  .tel-what {
+    margin-top: -60px;
+  }
+}
