--- a/src/app/styles/ui/carousel.scss
+++ b/src/app/styles/ui/carousel.scss
@@ -195,7 +195,7 @@
 
   .carousel-item {
     padding: 0;
-    margin: 0;
+    margin: 0 0 30px 0;
   }
 
   .back-gr {
@@ -224,7 +224,8 @@
 
     .more-btn-carousel {
       font-size: 16px !important;
-      bottom: 70px !important;
+      bottom: 117px !important;
+      left: 100px;
     }
 
     .carousel-btn-containter {
@@ -239,7 +240,8 @@
         padding: 6px 16px !important;
         width: 100%;
         max-width: 200px;
-        order: 2;
+        // margin-top: ;
+        // order: 2;
       }
 
       .carousel-btn-group {
