--- a/src/app/styles/ui/mapLocation.scss
+++ b/src/app/styles/ui/mapLocation.scss
@@ -205,3 +205,45 @@
     }
   }
 }
+@media (max-width: $phone-sm) {
+  .map-contacts {
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    overflow-x: hidden;
+    .weather-clock-block {
+      flex-direction: column;
+      align-items: flex-start;
+      position: static;
+      margin-top: 20px;
+
+      .ww-informers-box-854753 {
+        margin: 10px auto;
+      }
+      iframe {
+        margin: 0 auto;
+      }
+
+      > * + * {
+        margin-left: 0;
+        margin-top: 15px;
+      }
+    }
+    .map {
+      width: 100%;
+      overflow-x: hidden;
+
+      iframe {
+        width: 100% !important;
+        height: 300px !important;
+        max-width: 100%;
+        box-sizing: border-box;
+        display: block;
+      }
+
+      > div {
+        width: 100%;
+      }
+    }
+  }
+}
