--- a/src/app/styles/ui/swiperComponent.scss
+++ b/src/app/styles/ui/swiperComponent.scss
@@ -1,10 +1,10 @@
 .swiper {
   position: relative;
-  width: 100%; /* Убедитесь, что контейнер занимает всю ширину */
-  height: 100%; /* Убедитесь, что высота контейнера занимает всю доступную высоту */
+  width: 100%;
+  height: 100%;
   user-select: none;
   display: block;
-  overflow: hidden; /* Добавлено для обрезки изображения */
+  overflow: hidden;
 }
 
 .swiper-slide {
@@ -18,7 +18,7 @@
 .images-swiper {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Убедитесь, что изображение заполняет весь блок */
+  object-fit: cover;
   display: block;
 }
 
