--- a/src/app/styles/ui/imgBlock.scss
+++ b/src/app/styles/ui/imgBlock.scss
@@ -58,8 +58,8 @@
 
     .img_text {
       padding-top: 20px;
-      width: 350px;
-      font-size: 30px;
+      max-width: 80%;
+      font-size: 25px;
       margin-bottom: 20px;
     }
   }
