--- a/src/app/styles/ui/gallery.scss
+++ b/src/app/styles/ui/gallery.scss
@@ -93,6 +93,22 @@
     }
   }
 }
+@media (max-width: $phone-sm) {
+  .gallery-container {
+    height: 500px;
+  }
+  .gallery-img-block {
+    gap: 0.5rem;
+    padding: 0 1.5rem;
+
+    img {
+      width: 100%;
+      box-shadow: none;
+
+      // height: 85%;
+    }
+  }
+}
 @media (max-width: 768px) {
   .gallery-container {
     height: 500px;
