--- a/src/app/styles/ui/carousel.scss
+++ b/src/app/styles/ui/carousel.scss
@@ -394,3 +394,72 @@
     height: auto;
   }
 }
+@media (max-width: $phone-sm) {
+  .carousel-container {
+    width: 100%;
+  }
+
+  .carousel-item {
+    padding: 0;
+    margin: 0 0 30px 0;
+  }
+
+  .back-gr {
+    flex-direction: column;
+    padding: 20px;
+    width: calc(100% - 40px);
+    margin: 0 auto;
+  }
+
+  .carousel-item-description {
+    padding: 10px;
+    margin-top: 10px;
+
+    .h2-carousel {
+      font-size: 20px !important;
+    }
+
+    .sd-carousel {
+      font-size: 18px !important;
+      margin-bottom: 20px !important;
+    }
+
+    .size-carousel {
+      font-size: 14px !important;
+    }
+
+    .more-btn-carousel {
+      font-size: 16px !important;
+      bottom: 117px !important;
+      left: 100px;
+    }
+
+    .carousel-btn-containter {
+      position: static;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 15px;
+      gap: 10px;
+
+      .carousel-btn-book {
+        font-size: 16px !important;
+        padding: 6px 16px !important;
+        width: 100%;
+        max-width: 200px;
+        // margin-top: ;
+        // order: 2;
+      }
+
+      .carousel-btn-group {
+        order: 1;
+        margin: 0 !important;
+      }
+    }
+  }
+
+  .room-images-swiper {
+    width: 100%;
+    max-height: 250px;
+    height: auto;
+  }
+}
