--- a/src/app/styles/ui/mapLocation.scss
+++ b/src/app/styles/ui/mapLocation.scss
@@ -211,39 +211,117 @@
     align-items: center;
     width: 100%;
     overflow-x: hidden;
-    .weather-clock-block {
-      flex-direction: column;
-      align-items: flex-start;
-      position: static;
-      margin-top: 20px;
 
-      .ww-informers-box-854753 {
-        margin: 10px auto;
-      }
-      iframe {
-        margin: 0 auto;
-      }
-
-      > * + * {
-        margin-left: 0;
-        margin-top: 15px;
-      }
-    }
-    .map {
+    .contacts {
       width: 100%;
+      max-width: 100%;
+      box-sizing: border-box;
+      padding: 20px;
+      margin: 0;
       overflow-x: hidden;
 
-      iframe {
-        width: 100% !important;
-        height: 300px !important;
-        max-width: 100%;
-        box-sizing: border-box;
-        display: block;
+      .h3-a-container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+        h3 {
+          margin-bottom: 10px;
+        }
+
+        a {
+          position: static;
+          margin: 10px 0 0 0;
+          font-size: 16px;
+          padding: 6px 16px;
+          display: inline-block;
+          align-self: flex-start;
+        }
       }
 
-      > div {
-        width: 100%;
+      .route-btn {
+        display: block;
+        margin: 10px auto 0 auto;
+        width: fit-content;
+      }
+
+      .weather-clock-block {
+        flex-direction: column;
+        align-items: flex-start;
+        position: static;
+        margin-top: 20px;
+
+        .ww-informers-box-854753 {
+          margin: 10px auto;
+        }
+        iframe {
+          margin: 0 auto;
+        }
+
+        > * + * {
+          margin-left: 0;
+          margin-top: 15px;
+        }
       }
     }
   }
+
+  .map {
+    width: 100%;
+    overflow-x: hidden;
+
+    iframe {
+      width: 100% !important;
+      height: 300px !important;
+      max-width: 100%;
+      box-sizing: border-box;
+      display: block;
+    }
+
+    > div {
+      width: 100%;
+    }
+  }
 }
+// @media (max-width: $phone-sm) {
+//   .map-contacts {
+//     flex-direction: column;
+//     align-items: center;
+//     width: 100%;
+//     overflow-x: hidden;
+//     .weather-clock-block {
+//       flex-direction: column;
+//       align-items: flex-start;
+//       position: static;
+//       margin-top: 20px;
+
+//       .ww-informers-box-854753 {
+//         margin: 10px auto;
+//       }
+//       iframe {
+//         margin: 0 auto;
+//       }
+
+//       > * + * {
+//         margin-left: 0;
+//         margin-top: 15px;
+//       }
+//     }
+//     .map {
+//       width: 100%;
+//       overflow-x: hidden;
+
+//       iframe {
+//         width: 100% !important;
+//         height: 300px !important;
+//         max-width: 100%;
+//         box-sizing: border-box;
+//         display: block;
+//       }
+
+//       > div {
+//         width: 100%;
+//       }
+//     }
+//   }
+// }
