--- a/src/app/styles/ui/imgBlock.scss
+++ b/src/app/styles/ui/imgBlock.scss
@@ -68,7 +68,7 @@
 
 @media (max-width: $mobile) {
   .img-block {
-    height: 400px;
+    // height: 600px;
 
     .img_text {
       padding-top: 20px;
