--- a/src/app/styles/ui/imgBlock.scss
+++ b/src/app/styles/ui/imgBlock.scss
@@ -80,7 +80,7 @@
 }
 @media (max-width: $phone-sm) {
   .img-block {
-    height: 420px;
+    // height: 420px;
 
     .img_text {
       padding-top: 30px;
