--- a/src/app/styles/ui/imgBlock.scss
+++ b/src/app/styles/ui/imgBlock.scss
@@ -74,7 +74,8 @@
       padding-top: 20px;
       max-width: 80%;
       font-size: 25px;
-      margin-bottom: 20px;
+      // margin-bottom: 20px;
+      margin-bottom: 220px;
     }
   }
 }
@@ -86,7 +87,7 @@
       padding-top: 30px;
       max-width: 80%;
       font-size: 30px;
-      margin-bottom: 30px;
+      margin-bottom: 220px;
     }
   }
 }
