--- a/src/app/styles/ui/imgBlock.scss
+++ b/src/app/styles/ui/imgBlock.scss
@@ -19,6 +19,16 @@
     position: relative;
     z-index: 1;
   }
+  .btn-prev {
+    position: absolute;
+    bottom: 20px;
+    right: 50px;
+    color: aliceblue;
+    font-size: 22px;
+    cursor: pointer;
+    background: none;
+    border: none;
+  }
 
   .bg-video {
     position: absolute;
@@ -66,6 +76,44 @@
   }
 }
 
+// modal
+.modal-video-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+
+  .modal-video-content {
+    position: relative;
+    max-width: 90%;
+    max-height: 90%;
+
+    .modal-video-close-btn {
+      position: absolute;
+      top: -40px;
+      right: 0;
+      background: none;
+      border: none;
+      color: white;
+      font-size: 2rem;
+      cursor: pointer;
+    }
+
+    .modal-video {
+      width: 100%;
+      height: auto;
+      max-height: 80vh;
+      display: block;
+    }
+  }
+}
+
 @media (max-width: $mobile) {
   .img-block {
     // height: 600px;
@@ -75,7 +123,7 @@
       max-width: 80%;
       font-size: 25px;
       // margin-bottom: 20px;
-      margin-bottom: 220px;
+      margin-bottom: 320px;
     }
   }
 }
@@ -87,7 +135,7 @@
       padding-top: 30px;
       max-width: 80%;
       font-size: 30px;
-      margin-bottom: 220px;
+      margin-bottom: 3cqw;
     }
   }
 }
