--- a/src/app/styles/ui/carousel.scss
+++ b/src/app/styles/ui/carousel.scss
@@ -399,6 +399,10 @@
     width: 100%;
   }
 
+  .modal-main-content {
+    display: block;
+  }
+
   .carousel-item {
     padding: 0;
     margin: 0 0 30px 0;
