--- a/src/app/styles/ui/carousel.scss
+++ b/src/app/styles/ui/carousel.scss
@@ -260,6 +260,14 @@
   display: flex;
   flex-direction: column;
 
+  .carousel-btn-more-book {
+    font-size: 20px;
+    padding: 4px 8px 5px 8px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 5px;
+    cursor: pointer;
+  }
+
   .modal-title {
     font-size: 24px;
     margin-bottom: 15px;
