--- a/src/app/styles/ui/carousel.scss
+++ b/src/app/styles/ui/carousel.scss
@@ -475,3 +475,16 @@
     height: auto;
   }
 }
+
+@media (max-width: $tablet) {
+  .sd-carousel {
+    font-size: 16px !important;
+    // margin-bottom: 20px !important;
+  }
+  .room-images-swiper {
+    margin-top: 48px;
+    width: 340px;
+    max-height: 270px;
+    height: auto;
+  }
+}
