--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -10,8 +10,9 @@ $a-color: #ff7043;
 
 // Адаптив
 $mobile: 400px;
-$phone-sm: 500.98px;
+$phone-sm: 550.98px;
 $phone-md: 750.98px;
 $tablet: 850.98px;
-$laptop: 1199.98px;
-$desktop: 1200px;
+// $tabletB: 950.98px;
+$laptop: 1100.98px;
+$desktop: 1300px;
